fix: update Appwrite endpoint in .env and refactor user actions for improved session handling

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 
 #APPWRITE
-NEXT_PUBLIC_APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
+NEXT_PUBLIC_APPWRITE_ENDPOINT=https://fra.cloud.appwrite.io/v1
 NEXT_PUBLIC_APPWRITE_PROJECT=6849e607001ea99dc1ab
 APPWRITE_DATABASE_ID=6849e850001b94a205a3
 APPWRITE_USER_COLLECTION_ID=6849e87a0006193832df
