update user sign-up process to include Dwolla customer creation and enhance user data handling

--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ PLAID_PRODUCTS=auth,transactions,identity
 PLAID_COUNTRY_CODES=US,CA
 
 #DWOLLA
-DWOLLA_KEY=
-DWOLLA_SECRET=
-DWOLLA_BASE_URL=
-DWOLLA_ENV=
+DWOLLA_KEY=7ocfzQ7A9B8HFMa0lcjP3kEbuqxiVsWh9SeaVOD7JuZrf25b7t
+DWOLLA_SECRET=zFvMYFD4EQCmnLiQs4rIvX7JOPM3Q6iINFliElR4heL3rma8la
+DWOLLA_BASE_URL=https://api-sandbox.dwolla.com
+DWOLLA_ENV=sandbox
