--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
-    "@sentry/nextjs": "^9.28.1",
+    "@sentry/nextjs": "^9.37.0",
+    "appwrite": "^18.1.1",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dwolla-v2": "^3.4.0",
     "lucide-react": "^0.374.0",
-    "next": "14.2.3",
+    "next": "^14.2.30",
     "node-appwrite": "^17.0.0",
     "plaid": "^23.0.0",
     "query-string": "^9.0.0",
@@ -34,7 +35,7 @@
     "react-plaid-link": "^3.6.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.25.57"
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@types/estree": "^1.0.8",
